--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,7 +5,7 @@ compatibility_date = "2022-04-22"
 
 [vars]
 WORKERS_RS_VERSION = "0.0.9"
-CORS_ORIGIN = "https://www.example.com,http://127.0.0.1:3000,http://localhost:3000"
+CORS_ORIGIN = "https://schwafel.github.io,http://127.0.0.1:3000,http://localhost:3000"
 
 [build]
 command = "cargo install -q worker-build && worker-build --release" # required
